--- a/styles/order-page-style.css
+++ b/styles/order-page-style.css
@@ -1,2 +1,29 @@
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.flex-container>div {
+    margin: 10px;
+    padding: 20px;
+    font-size: 30px;
+    max-width: 250px;
+}
+
+
+
+@media (max-width: 575px) {
+    .flex-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .flex-container>div{
+        width: 100%;
+    }
+}
 
 
