--- a/styles/general.css
+++ b/styles/general.css
@@ -1,7 +1,7 @@
 
 
 body{
-    background-image: url("../media/background-img.png");
+    background-image: url("../media/pizza-close-up-side.webp");
     background-size: cover;
     
 }
