--- a/styles/general.css
+++ b/styles/general.css
@@ -1,9 +1,8 @@
-
-
 body{
+    background-color: rgba(49, 40, 39, .99);
     background-image: url("../media/pizza-close-up-side.webp");
-    background-size: cover;
-    
+    background-blend-mode: multiply;
+    background-size: 100%;
 }
 
 .navbar{
@@ -12,20 +11,15 @@ body{
         min-height: 20vh;
 }
 
-.nav-custom{
-    background-color: rgba(61, 27, 20, .9);
-}
-
-
 .nav-link, .navbar-brand{
-    color: silver;
+    color: rgb(218, 166, 141);
     font-weight: bold;
 }
 
 .nav-link:hover, .active {
     color: white;
     font-weight: 900;
-    background-color: rgba(185, 104, 75, 0.6);
+    background-color: rgba(132, 72, 54, 0.6);
 }
 
 .navbar-brand:hover{
@@ -33,7 +27,7 @@ body{
 }
 
 .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28, 280, 280, 280.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28, 218, 166, 144.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
 .navbar-toggler {
@@ -41,8 +35,8 @@ body{
 }
 
 .footer-custom{
-    background-color: rgba(61, 27, 20);
-    color: silver;
+    background-color: rgba(49, 40, 39, .7);
+    color: rgba(218, 166, 141);
     align-items: center;
 }
 
@@ -56,9 +50,8 @@ body{
 }
 
 .content {
-    background-color: rgba(61, 27, 20, .9);
-    margin-top: 5vh;
     padding: 10vh;
-    color: rgba(220, 224, 217);
+    padding-top: 1vh;
+    color: rgba(218, 166, 141);
     
 }
