--- a/styles/order-page-style.css
+++ b/styles/order-page-style.css
@@ -1,4 +1,6 @@
-
+body{
+    min-width: 420px;
+}
 
 .flex-container {
     display: flex;
@@ -11,12 +13,24 @@
     margin: 10px;
     padding: 20px;
     font-size: 30px;
-    max-width: 250px;
+    width: 250px;
 }
+
+.card{
+    width: 248px;
+}
+
+
+.card-img-top{
+    height: 208px;
+    width: 208px;
+}
+
 
 .modal-grid{
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto;
+
 }
 
 .modal-grid > img {
@@ -25,8 +39,31 @@
     border: 5px solid black;
     margin: 10px;
 }
+
 .modal-grid>p {
     margin: 10px;
+}
+
+.btn-danger{
+    background-color: #7A130D;
+    border: 0px;
+
+}
+
+.btn-success {
+    background-color: #006c67;
+    border: 0px;
+
+}
+
+.btn-primary{
+    background-color: #844836;
+    border: 0px;
+    margin: 5px;
+}
+
+.btn-primary{
+
 }
 
 #shopping-cart-icon{
@@ -45,8 +82,8 @@
 }
 
 
-@media (max-width: 575px) {
-    .flex-container {
+/* @media (max-width: 430px) {
+    /* .flex-container {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -54,18 +91,12 @@
 
     .flex-container>div{
         width: 100%;
-    }
+    } */
 
-    .modal-grid {
+    /* .modal-grid {
         display: grid;
         grid-template-columns: auto;
-    }
-    
-    .modal-grid>img {
-            max-width: 250px;
-            border-radius: 25px;
-            border: 5px solid black;
-        }
-}
+    } */
 
+/* } */
 
